--- a/STOCKNDRIVE/STOCKNDRIVE.csproj
+++ b/STOCKNDRIVE/STOCKNDRIVE.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
   <ItemGroup>
